crates/forge_app/src/tools/fs/snapshots/forge_app__tools__fs__fs_list__test__fs_list_recursive.snap
---
source: crates/forge_app/src/tools/fs/fs_list.rs
expression: "TempDir::normalize(&result)"
snapshot_kind: text
---
<file_list path="[TEMP_DIR]">
<dir path="/">
<dir path="dir1/">
<file path="dir1/file1.txt">
<dir path="dir1/subdir/">
<file path="dir1/subdir/file2.txt">
<file path="root.txt">
</file_list>
